8/20/12 bug fix in WellDefinedLineProperty constructor
8/20/12 change LineFormsModel constructor, pass in default line, create property internally
8/20/12 add a zero-arg constructor to GameTimer
7/31/12 add PlayState.NONE to fix bugs with starting a new game in the middle of playing a game
7/31/12 #3395, move -startModule program arg to PhetApplication.startApplication
# 0.00.22 (66238) Jul 25, 2012
7/25/12 dev version to demo progress on first challenge type: graph a line in slope-intercept form
7/25/12 setPickable(false) for game challenge nodes that aren't interactive
7/25/12 fix color of correct answer line, as shown by point tool
7/25/12 make game graph interactive only when in "Check" state
7/25/12 add 2 point tools to "Graph the Line" challenge
7/25/12 change PointTool to use a single list of lines, so it can be reused in the game
7/24/12 on "Show Answer", set color of equation to be same as the correct line
7/24/12 clean up challenge and state initialization for game
7/24/12 complete game-play cycle for one type of challenge
7/24/12 mess around with colors for given, guess and correct answer
7/24/12 move game constants to GameConstants
7/24/12 first challenge: add manipulators, display points
7/24/12 partial first-pass at first challenge, no interactivity, brute-force implementation to investigate issues and architecture
7/24/12 update game-model fields before notifying observers that game phase has changed
7/24/12 simplify identification of objects that describe the same line, delete problematic override of equals
7/24/12 move highlight color out of line model and into view, since it is applicable to saved lines only
7/24/12 replace odd mutation constructor with "with" method in StraightLine
7/24/12 fix initial position of slope-intercept manipulators, broken in [66153] by overriding StraightLine.equals
7/23/12 rudimentary challenge added to game model
7/23/12 simplify a line only if its rise and run are who numbers