@@ -90,7 +90,7 @@ public class SlopeInterceptGraphNode extends LineGraphNode {
         super.updateInteractiveLine( line, graph, mvt );
         if ( slopeManipulatorNode != null && interceptManipulatorNode != null ) {
             // move the manipulators
-            final double y = line.rise + line.yIntercept;
+            final double y = line.rise + line.y1;
             double x;
             if ( line.run == 0 ) {
                 x = 0;
@@ -102,7 +102,7 @@ public class SlopeInterceptGraphNode extends LineGraphNode {
                 x = line.solveX( y );
             }
             slopeManipulatorNode.setOffset( mvt.modelToView( new Point2D.Double( x, y ) ) );
-            interceptManipulatorNode.setOffset( mvt.modelToView( new Point2D.Double( 0, line.yIntercept ) ) );
+            interceptManipulatorNode.setOffset( mvt.modelToView( new Point2D.Double( 0, line.y1 ) ) );
         }
     }
 
